Update hello.yml user creation

--- a/playbook/hello.yml
+++ b/playbook/hello.yml
@@ -1,6 +1,9 @@
 ---
 - hosts: all
   tasks:
-  - debug:
-      msg: "{{ greetings }}"
-      verbosity: 0
+  - name: Add the user 'johnd' with a specific uid and a primary group of 'admin'
+    user:
+      name: johnd
+      comment: John Doe
+      uid: 1040
+      group: admin
